chore: remove mongodb string

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ NODE_ENV=development
 PORT=3000
 
 DB_NAME=job_portal_db
-DB_STRING=mongodb+srv://iksandi:hF5TenOOuVzyR8r6@iksandi.qgdcrse.mongodb.net/?retryWrites=true&w=majority
+DB_STRING=
 
 BASE_URL=http://localhost:3000
 BASE_ASSET_PATH=uploads
